[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ball-compiler"
version = "0.1.0"
description = "Ball -> Python compiler (emits Python source that runs on the ballrt runtime)."
readme = "AGENTS.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.scripts]
ballpyc = "ball_compiler.__main__:main"

[tool.setuptools]
packages = ["ball_compiler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
