[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ballrt"
version = "0.1.0"
description = "Zero-dependency Python runtime for Ball programs compiled to Python."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[tool.setuptools]
packages = ["ballrt"]
