[package]
name = "ball-encoder"
description = "Rust -> Ball encoder."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ball-shared = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }

[dev-dependencies]
ball-compiler = { workspace = true }
