[package]
name = "ball-shared"
description = "Ball protobuf bindings and shared runtime types (BallValue/BallList/BallMap/BallFunction) for the Rust implementation."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
prost = { workspace = true }
# "serde" enables prost-reflect's proto3-JSON (de)serialization for
# DynamicMessage, used by the descriptor pool round-trip test below and by
# later descriptor-driven MessageCreation/Struct-metadata work (issue #34).
prost-reflect = { workspace = true, features = ["serde"] }
# Insertion-ordered runtime map (`BallMap`, issue #35) — see the workspace
# Cargo.toml comment for why this replaces a plain `HashMap`.
indexmap = { workspace = true }
regex = "1.12.4"
# `dart:convert` JsonEncoder/JsonDecoder in the self-hosted engine's
# `std_convert` surface (issue #39) — parse/emit JSON via the compiled engine's
# `convert` runtime helper (see `runtime::dartsdk::convert`).
serde_json = "1"
